# himalaya-gui

./: .gitignore  Cargo.toml  flake.nix  index.html  rust-toolchain.nix
.github/workflows/: pages.yml
assets/: sw.js
src/: app.rs  lib.rs  main.rs  server.rs  theme.rs
src/css/: mod.rs  parser.rs  properties.rs  rules.rs
src/styling/: element.rs  fonts.rs  properties.rs
src/ui/: envelopes.rs  label.rs  mailbody.rs  mailboxes.rs  toolbar.rs
