[package]
name = "himalaya-gui"
version = "0.0.1"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
rust-version = "1.65"

[package.metadata.docs.rs]
all-features = true

[lib]
name = "himalaya_gui"

[dependencies]
egui = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
  # "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
  # "default_fonts", # Embed the default egui fonts.
  "wgpu",          # Use the glow rendering backend. Alternative: "wgpu".
  # "persistence",   # Enable restoring app state when restarting the app.
]}

log = "0.4"
anyhow = "1"
env_logger = "0.10"
notify = "6"
dark-light = "1"
parking_lot = "0.12"
ouroboros = "0.15"
pimalaya-email = "=0.8.0"
himalaya = { git = "https://github.com/soywod/himalaya.git" }
simplecss = "0.2"
css-color-parser = "0.1.2"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
